tests/rosetta/out/Dart/active-object.error
run error: exit status 254
../../tests/rosetta/out/Dart/active-object.dart:9:57: Error: The argument type 'num' can't be assigned to the parameter type 'String'.
    var denom = double.parse((((2 * (n as num)) as num) * (((2 * (n as num) as num) + 1) as num)));
                                                        ^
../../tests/rosetta/out/Dart/active-object.dart:11:24: Error: A value of type 'num' can't be assigned to a variable of type 'double'.
    sum = (sum as num) + (term as num);
                       ^
../../tests/rosetta/out/Dart/active-object.dart:12:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    n = (n as num) + 1;
                   ^
../../tests/rosetta/out/Dart/active-object.dart:31:28: Error: The argument type 'int' can't be assigned to the parameter type 'String'.
    var t2 = (double.parse(i)) * dt;
                           ^
../../tests/rosetta/out/Dart/active-object.dart:33:11: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    s = s + ((((k1 + (k2 as num)) as num) * 0.5 as num) * (((t2 as num) - t1) as num) as num);
          ^
../../tests/rosetta/out/Dart/active-object.dart:34:10: Error: A value of type 'double' can't be assigned to a variable of type 'int'.
    t1 = t2;
         ^
../../tests/rosetta/out/Dart/active-object.dart:39:32: Error: The argument type 'int' can't be assigned to the parameter type 'String'.
    var t2 = 2 + (double.parse(i2)) * dt;
                               ^
../../tests/rosetta/out/Dart/active-object.dart:41:11: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    s = s + ((((k1 + (k2 as num)) as num) * 0.5 as num) * (((t2 as num) - t1) as num) as num);
          ^
../../tests/rosetta/out/Dart/active-object.dart:42:10: Error: A value of type 'double' can't be assigned to a variable of type 'int'.
    t1 = t2;
         ^
../../tests/rosetta/out/Dart/active-object.dart:43:10: Error: A value of type 'int' can't be assigned to a variable of type 'double'.
    k1 = k2;
         ^
../../tests/rosetta/out/Dart/active-object.dart:70:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/active-object.dart:99:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/active-object.dart:104:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/active-object.dart:108:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
